fix(core:control): label alignments - allow vertical control labels to expand full width - prevent control group message wrapping on icon

--- a/packages/core/src/forms/control-group/control-group.element.scss
+++ b/packages/core/src/forms/control-group/control-group.element.scss
@@ -18,11 +18,6 @@ $fallback-width: calc(#{$cds-global-layout-space-xxl} * 2);
   flex-basis: 0;
 }
 
-.messages,
-.messages-container {
-  width: 100%;
-}
-
 cds-control-action.status {
   height: #{$cds-global-space-7};
 }
